Make a Go/Hugo module, ensure theme pulls modules
This does a couple of things:
- adds go.mod to root and sets the module line for this theme. This
  allows the theme to be installed as a module per
  https://gohugo.io/hugo-modules/use-modules/#use-a-module-for-a-theme
  instead of being forced to use git submodules or, worse, just copy the
  files.
- moves default go modules that the theme should import into the theme's
  config.toml so that any user of the theme will get the needed go
  modules via running hugo.
- makes the example site pull the main theme as a module
- adds Dependabot so updates are suggested as pull requests
  automatically and adds go.sum back to make this work right
- makes hugo version consistent across module config and other files

--- a/exampleSite/config/_default/config.toml
+++ b/exampleSite/config/_default/config.toml
@@ -20,7 +20,13 @@ hasCJKLanguage = true # If hasCJKLanguage true, auto-detect Chinese/Japanese/Kor
 [module]
 [module.hugoVersion]
 extended = true
-min = "0.88.1"
+min = "0.106.0"
+
+# Import the theme as a module per
+# https://gohugo.io/hugo-modules/use-modules/#use-a-module-for-a-theme
+[[module.imports]]
+path = 'github.com/statichunt/iwriter-hugo.git'
+
 
 ############################# Outputs ##############################
 [outputs]
